# xtechnical_analysis

./: .gitignore  CMakeLists.txt
code_blocks/test/: body_filter  body_filter.cpp  cluster_shaper.cpp
include/: xtechnical_common.hpp
include/indicators/: ssa.hpp  xtechnical_atr.hpp  xtechnical_awesome_oscillator.hpp  xtechnical_body_filter.hpp  xtechnical_cci.hpp  xtechnical_cluster_shaper.hpp  xtechnical_delay_line.hpp  xtechnical_fast_min_max.hpp  xtechnical_fisher.hpp  xtechnical_fractals.hpp  xtechnical_fractals_level.hpp  xtechnical_period_stats.hpp  xtechnical_rsi.hpp  xtechnical_sma.hpp  xtechnical_super_trend.hpp  xtechnical_true_range.hpp
